@@ -31,6 +31,7 @@ S3method(print,dynEGA.Individual)
 S3method(print,dynEGA.Population)
 S3method(print,generalizability)
 S3method(print,hierEGA)
+S3method(print,importance)
 S3method(print,infoCluster)
 S3method(print,invariance)
 S3method(print,itemStability)
@@ -55,6 +56,7 @@ S3method(summary,dynEGA.Individual)
 S3method(summary,dynEGA.Population)
 S3method(summary,generalizability)
 S3method(summary,hierEGA)
+S3method(summary,importance)
 S3method(summary,infoCluster)
 S3method(summary,invariance)
 S3method(summary,itemStability)
@@ -101,6 +103,7 @@ export(net.loads)
 export(net.scores)
 export(network.estimation)
 export(network.generalizability)
+export(network.importance)
 export(network.predictability)
 export(polychoric.matrix)
 export(riEGA)
